--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
         <div class="prod-icon">
             <a href="https://www.apple.com/apple-tv-4k/"><img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/store-card-13-appletv-nav-202210?wid=400&hei=260&fmt=png-alpha&.v=1664628458484"
-                alt="" class="prod-icon-img"></a>
+                alt="" class="prod-icon-img" traget="_Blank"></a>
             <p>Apple TV 4K</p>
         </div>
         <div class="prod-icon">
